--- a/views/addwindow.html
+++ b/views/addwindow.html
@@ -6,7 +6,7 @@
 <body>
     <form action="">
         <div>
-            <label for="">Item</label>
+            <label for="">Potato</label>
         </div>
     </form>
 </body>
